crates/libs/frieze/tests/ui/unsupported_field_type_u32.rs
use frieze::Schema;

#[derive(Schema)]
struct S {
    x: u32,
}

fn main() {}
